--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -70,7 +70,7 @@ endblock %} {% block content %}
               </div>
               <div class="col-md-6">
                 <div class="mb-3">
-                  {{ profile_form.confirm_password.label }} { profile_form.confirm_password(class="input", id="profile-confirm-password") }}
+                  {{ profile_form.confirm_password.label }} {{ profile_form.confirm_password(class="input", id="profile-confirm-password") }}
                   
           
                 </div>
