--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -179,7 +179,10 @@
                 <div class="profile-area">
                   <i class="bi bi-search me-2"></i>
                   <i class="bi bi-bell"></i>
-                  <img src="{{image_file}}" alt="Profile Picture" />
+                  <img
+                    src="{{ url_for('static', filename='images/' + current_user.image_file) }}"
+                    alt="Profile Picture"
+                  />
                   <span>{{current_user.full_name}}</span>
                   <i class="bi bi-chevron-down"></i>
                 </div>
@@ -199,7 +202,10 @@
         <input type="text" class="form-control ps-4" placeholder="Search" />
       </div>
 
-      <img src="{{image_file}}" alt="Profile Picture" />
+      <img
+        src="{{ url_for('static', filename='images/' + current_user.image_file) }}"
+        alt="Profile Picture"
+      />
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
