--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -63,8 +63,19 @@
         <div class="tab-content d-flex justify-content-center">
           <!-- PROFIILE -->
           <div id="profile" class="tab-pane fade {% if active_tab == 'profile' %}show active{% endif %}">
-            <form method="POST" action="{{url_for('main.settings',active_tab='profile')}}">
+            
+            <form method="POST" enctype="multipart/form-data" action="{{ url_for('main.settings', active_tab='profile') }}">
               {{ profile_form.hidden_tag() }}
+
+              <img class="rounded-circle account-img" src="{{ url_for('static', filename='images/' + current_user.image_file) }}" alt="Profile_image"/>
+
+              <div class="form-group">
+                {{ profile_form.picture.label() }} {{ profile_form.picture(class="profile_form-control-file") }}
+                {% if profile_form.picture.errors %} {% for error in profile_form.picture.errors %}
+                <span class="text-danger">{{ error }}</span><br />
+                {% endfor %} {% endif %}
+              </div>
+
               <div class="row mb-5 mt-2">
                 <div class="col-md-6">
                   <div class="mb-3">
@@ -75,7 +86,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="mb-3">
-                    {{ profile_form.id_number.label }} {{ profile_form.id_number(class="input",readonly=True) }}     
+                    {{ profile_form.id_number.label }} {{ profile_form.id_number(class="input") }}     
             
                   </div>
                 </div>
@@ -84,14 +95,14 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="mb-3">
-                    {{ profile_form.password.label }} {{ profile_form.password(class="input") }}      
+                    {{ profile_form.email.label }} {{ profile_form.email(class="input") }}      
             
   
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="mb-3">
-                    {{ profile_form.confirm_password.label }} {{ profile_form.confirm_password(class="input") }}
+                    {{ profile_form.password.label }} {{ profile_form.password(class="input") }}
                     
             
                   </div>
