fix BASE_URL issue

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -376,7 +376,7 @@
                             class="form-control"
                             id="idNumber{{ member.id }}"
                             name="id_number"
-                            value="{{ member.member_zone }}"
+                            value="{{ member.zone_id }}"
                             readonly
                           />
                         </div>
@@ -391,7 +391,7 @@
                             class="form-control"
                             id="idNumber{{ member.id }}"
                             name="id_number"
-                            value="{{ member.bank }}"
+                            value="{{ member.bank_id }}"
                             readonly
                           />
                         </div>
