fix committe role addition

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -363,6 +363,7 @@
                             id="idNumber{{ member.id }}"
                             name="id_number"
                             value="{{ member.id_number }}"
+                            readonly
                           />
                         </div>
                         <div class="mb-3">
