Override post method in usersresource to accept role_id so that I automatically assign role Member to a user via the api and not via the logic route

--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -196,7 +196,7 @@
                     style="height: 150px"
                   >
                       Dear Member, 
-                      Upcoming block is hosted by {{zone}} zone and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
+                      Upcoming block is hosted by {{zone}}  and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
   
                       </textarea
                   >
@@ -304,6 +304,7 @@
                     <div class="modal-header">
                       <h5
                         class="modal-title"
+                        style="color: #4c9323"
                         id="editModalLabel{{ member.id }}"
                       >
                         Edit Member
@@ -413,7 +414,7 @@
                         </div>
                         <button
                           type="submit"
-                          class="btn btn-primary"
+                          class="submit-btn"
                           name="edit_member_submit"
                         >
                           Save Changes
@@ -437,6 +438,7 @@
                     <div class="modal-header">
                       <h5
                         class="modal-title"
+                        style="color: #4c9323"
                         id="removeModalLabel{{ member.id }}"
                       >
                         Remove Member
